# nix-cabal-data-dir-surprise

./: .gitignore  README.md  cabal.project  default.nix
app/: app.cabal
app/src/: Main.hs
