cabal-version:      2.4
name:               app
version:            0.1.0.0

author:             Justin Bailey
maintainer:         jgbailey@gmail.com

extra-source-files: CHANGELOG.md

executable app
    main-is:          Main.hs

    build-depends:    base ^>=4.14.3.0
        , library
    hs-source-dirs:   src
    default-language: Haskell2010
